reverting to sending email code, url mapping for sending and verifying codes
