# src/main/java/org/dsmhack/controller/LoginController.java
@@ -19,10 +19,15 @@ public class LoginController {
     @Autowired
     private UserRepository userRepository;
 
-    @PostMapping("/login")
+    @PostMapping("/login/sendCode")
     public ResponseEntity login(@RequestBody String emailAddress) {
         User user = userRepository.findByEmail(emailAddress);
         loginService.login(user);
+        return new ResponseEntity(HttpStatus.OK);
+    }
+    
+    @PostMapping("/login/verifyCode")
+    public ResponseEntity verifyCode(@RequestBody String securityToken) throws Exception {
         return new ResponseEntity(HttpStatus.OK);
     }
 }
